--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,8 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MathUtil
 excludes=
-file.reference.hamcrest-core-1.3.jar=C:\\Program Files\\NetBeans-14\\netbeans\\platform\\modules\\ext\\hamcrest-core-1.3.jar
-file.reference.junit-4.13.2.jar=C:\\Program Files\\NetBeans-14\\netbeans\\platform\\modules\\ext\\junit-4.13.2.jar
+file.reference.hamcrest-core-1.3.jar=hamcrest-core-1.3.jar
+file.reference.junit-4.13.2.jar=junit-4.13.2.jar
 includes=**
 jar.compress=false
 javac.classpath=
